Bug 155462 - Scrollbar tooltips not shown anymore when dragging thumb; ShowScrollBarTips option doesn't work
Summary: Scrollbar tooltips not shown anymore when dragging thumb; ShowScrollBarTips o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL: https://ask.libreoffice.org/t/floatin...
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Scrollbars Options-Dialog-Expert
  Show dependency treegraph
 
Reported: 2023-05-23 20:53 UTC by SR
Modified: 2023-08-10 10:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Image of OpenOffice tooltip scrolling display (6.26 MB, image/jpeg)
2023-05-23 20:53 UTC, SR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SR 2023-05-23 20:53:28 UTC
Created attachment 187466 [details]
Image of OpenOffice tooltip scrolling display

OpenOffice has a feature that allows the chapter names and page numbers to display while scrolling through a document (tooltips).
When scrolling through very large documents with numerous chapters it enabled the viewer to see which chapter they were currently going through.
Comment 1 m_a_riosv 2023-05-24 01:58:46 UTC
Last version working for me:
Versión 3.6.7.2 (ID de compilación: e183d5b)

I think there is an option, but I can't find it.
In expert configuration, there is an option that doesn't help
org.openoffice.Office.Writer.Layout.Window.ShowScrollBarTips
But in Calc it shows the row number.

Clean profile doesn't help also.


I have tested up to 
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f4c24da1e7f11664e0d2f688d2531f068e4a3bc0
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 nutka 2023-05-24 19:43:52 UTC
Does Bug 43650 sheds light on this issue?
Comment 3 m_a_riosv 2023-05-24 19:47:49 UTC Comment hidden (obsolete)
Comment 4 stragu 2023-05-24 22:54:04 UTC
m.a.riosv, bug 43650#c12 suggests the tooltip should have been kept when dragging the scrollbar thumb.

I think we should keep this open to restore that part of it. Especially since there is a corresponding expert configuration. Don't you agree?
Comment 5 m_a_riosv 2023-05-25 17:45:03 UTC
I can't agree, but UX don't, can be a lost of time.
Comment 6 Mike Kaganski 2023-07-05 07:56:35 UTC
I'm sorry, I can't follow the closing of this bug - especially this way.

* It is asking for the opposite compared to what happened in the "duplicate" bug - so it's no way it could be a dupe;
* It is a valid request, and bug 43650 created a regression - so I don't understand the decision to close it;
* I don't see any UX decision.

By the way, as mentioned in https://ask.libreoffice.org/t/floating-chapter-heading/93294/3, there is a help article mentioning it.
Comment 7 Mike Kaganski 2023-07-05 08:01:29 UTC
Additionally: bug 43650 was implemented in 4.1, and it indeed did what *was intended* - removed the tooltip on trackpad/mouse wheel scrolling. But 4.1 still showed the tooltip when scrolling using the scrollbar, and that regressed only in 4.2, so again - not a dupe, not the same, and not closed.
Comment 8 stragu 2023-07-05 11:16:14 UTC
Bibisected with linux-43all to range https://git.libreoffice.org/core/+log/7ef1a64bdb8f9afaeb93e7a88219650381e0d323..a47a153a7f75edfe3bce33f0d34b723cbd2d5195
Obvious culprit is 6005dd5366a86d6b7b1535233a99e24501e053a3 which is a cherrypick of:

commit a2bbabbe141de1303ebf052e5c22b6e77387785e
author	Ariel Constenla-Haile <arielch@apache.org>	Tue Dec 11 03:31:17 2012 +0000
committer	Ariel Constenla-Haile <arielch@apache.org>	Tue Dec 11 03:31:17 2012 +0000
tree ea4c84452263cb8d307f62a0aa3211b1a68b352b
parent e014a86867054660142dc5a6daa1af299d28e9b7 [diff]
i25945 - Allow disabling scrollbar tips by API and configuration
Notes:
merged as: 6005dd5366a86d6b7b1535233a99e24501e053a3

That commit added the extra expert configuration ShowScrollBarTips true by default) so it can be used independently of ShowContentTips.
Evidently it is not functional.
Comment 9 Mike Kaganski 2023-07-05 11:56:21 UTC Comment hidden (noise)
Comment 10 Mike Kaganski 2023-07-05 12:18:48 UTC
So:

1. The commit identified by Stéphane made the tooltips dependent on *two* options (for unclear reason): *both* "ShowScrollBarTips" expert config must be enabled, *and* Options->LibreOffice->General->Extended tips (why???);
2. It made "ShowScrollBarTips" false by default.

In view of already resolved (at that point) bug 43650, it was overkill - both "Extended tips" dependency, and "disabled by default" (note that i#25945 was also filed against the problems when *mouse-wheel* scrolling).

3. Commit 4ed26badfd6fd9190cb6e54078b41eb38cb37dca (use resolution independent positions for writer's screen-rendering, 2022-01-20) broke ShowScrollBarTips. Before that, it "worked" (if someone ever used it; it seems, that it degraded since then).

So besides the regression fix, IMO, it needs some love, and then remove both Extended tips dependency, and "off by default".
Comment 11 Mike Kaganski 2023-07-05 12:45:35 UTC
(In reply to Mike Kaganski from comment #10)
> 1. The commit identified by Stéphane made the tooltips dependent on *two*
> options (for unclear reason): ... *and* Options->LibreOffice->General->Extended tips (why???);

This is wrong; the actual dependency is not on *extended* tips, but simply for tips (which is still configurable in expert configuration, and used to have a checkbox in UI).

> ... remove both *Extended tips dependency* ...

so ignore this piece.
Comment 12 Commit Notification 2023-07-05 19:36:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e55e64a7b736df7dd902f88fcf0c889d43d2eed0

tdf#155462: Re-enable ShowScrollBarTips expert config

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-07-05 20:57:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/04e969822ef93e9afbcb4953182f439b9c16c6fd

tdf#155462: Re-enable ShowScrollBarTips expert config

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-07-05 20:58:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/dff8d3af57ebb4c3dab205e4deb966f5ebda55cd

tdf#155462: Re-enable ShowScrollBarTips expert config

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-07-06 04:05:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e997097eb0e36bbb6f1eb8519acfc4e8eb6337a

tdf#155462: fix the scrollbar tooltip text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Mike Kaganski 2023-07-06 04:16:53 UTC
So here are some easyhackable ideas, if anyone wants to handle them *in separate reports*:

* Check why is the ShowScrollBarTips is false by default? In safe mode, it's true. The commit identified in comment 8 also made it true, as indicated by Stéphane; but the end result was, that nobody saw the tooltip since v.4.2;

* Maybe make the tooltip position fixed - e.g., at top / bottom / center of the whole scrollbar (to make them less distracting, when travelling the screen side-by-side with the thumb - if this is still a concern for those who use scrollbars)? Done by hacking on aRect in "Handler of the scrollbars" IMPL_LINK(SwView, VertScrollHdl, weld::Scrollbar&, rScrollbar, void) in sw/source/uibase/uiview/viewport.cxx;

* Maybe create a UI for its visibility in Writer's options.
Comment 17 Mike Kaganski 2023-07-06 05:36:43 UTC
(In reply to Mike Kaganski from comment #16)
> * Check why is the ShowScrollBarTips is false by default? In safe mode, it's
> true. The commit identified in comment 8 also made it true, as indicated by
> Stéphane; but the end result was, that nobody saw the tooltip since v.4.2;

Ah - the relevant commit seems to be bd4b494ac8c4a82048d6849650672445c36e1026 (repair writer's scrollbar tooltip feature, 2022-08-03), so ignore this bullet.
Comment 18 SR 2023-07-06 16:17:31 UTC
(In reply to Commit Notification from comment #13)
> Mike Kaganski committed a patch related to this issue.
> It has been pushed to "libreoffice-7-6":
> 
> https://git.libreoffice.org/core/commit/
> 04e969822ef93e9afbcb4953182f439b9c16c6fd
> 
> tdf#155462: Re-enable ShowScrollBarTips expert config
> 
> It will be available in 7.6.0.0.beta2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

I tested this version this morning, and it now shows the page numbers only next to the scrollbar, but not the chapter names/numbers.  Page number changes can already be seen at the bottom left corner, though it's very "jumpy" compared to Open Office where the numbers scroll more smoothly and visibly.
Comment 19 Mike Kaganski 2023-07-07 07:30:16 UTC
(In reply to SR from comment #18)
> (In reply to Commit Notification from comment #13)
> > tdf#155462: Re-enable ShowScrollBarTips expert config
> 
> I tested this version this morning, and it now shows the page numbers only
> next to the scrollbar, but not the chapter names/numbers.

Please pay attention to what is notified here. There was also comment #15:
> tdf#155462: fix the scrollbar tooltip text
Comment 20 Commit Notification 2023-07-07 07:32:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4a0680d6cf059aef5b274e8ce5a0453cf376655

Related: tdf#155462 Avoid tooltip window hide before showing again

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2023-07-07 07:33:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a6b8c40d26c023cf8936017b92821f2b0df7ec58

Related: tdf#155462 Repaint changed tooltip text immediately

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2023-07-07 12:37:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1e8ec03543a8404543b9226896d36ab6dc72fa8f

tdf#155462: fix the scrollbar tooltip text

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2023-07-08 18:57:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c2c2d3546dae2673e325207a7328bb9403a85cea

tdf#155462: fix the scrollbar tooltip text

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 stragu 2023-07-12 07:52:46 UTC
Thanks Mike.
Works well with gen VCL:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 663db89378aa1f0425e795ef5d471f134e658dc4
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But I also tested in gtk3, kf5 and qt5 and I can't see the tooltips.
Comment 25 Commit Notification 2023-07-12 16:57:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-5":

https://git.libreoffice.org/core/commit/daf2224d69b81b12045970eba4543bf273bafc25

tdf#155462: Re-enable ShowScrollBarTips expert config

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Buovjaga 2023-08-09 18:08:41 UTC
Olivier submitted a help patch, check it out: https://gerrit.libreoffice.org/c/help/+/155525
Comment 27 Commit Notification 2023-08-10 10:21:27 UTC
Olivier Hallot committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/dfca100198e690f05987033bcd2b74e9057bcf8d

tdf#155462 Help for tool tips when dragging scrollbars