tdf#155462: Re-enable ShowScrollBarTips expert config

... accidentally broken by commit 4ed26badfd6fd9190cb6e54078b41eb38cb37dca.

Change-Id: I407e1eab47277dd8fa00c123b32596557fd5f2a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154038
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>